<?xml version="1.0"?>
<package>
  <name>qtros</name>
  <version>0.1.0</version>
  <description>

     qtros

  </description>
  <maintainer email="schonehellefreude@gmail.com">WonJunhee</maintainer>
  <author>WonJunhee</author>
  <license>BSD</license>
  <!-- <url type="bugtracker">https://github.com/stonier/qt_ros/issues</url> -->
  <!-- <url type="repository">https://github.com/stonier/qt_ros</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

 
</package>
